# zarafa-debian

./: AGPL-3  CONTRIBUTORS.txt  LICENSE.txt  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  versionheader.sh
ECtools/zarafa-admin/: ConsoleTable.cpp  ConsoleTable.h  Makefile.am  Makefile.in  zarafa-admin.cpp
ECtools/zarafa-archiver/: ArchiveControl.h  ArchiveControlImpl.cpp  ArchiveControlImpl.h  ArchiveManage.h  ArchiveManageImpl.cpp  ArchiveManageImpl.h  ArchiveStateCollector.cpp  ArchiveStateCollector.h  ArchiveStateUpdater.cpp  ArchiveStateUpdater.h  Archiver.cpp  Archiver.h  ArchiverImpl.cpp  ArchiverImpl.h  ArchiverSession.cpp  ArchiverSession.h  ArchiverSessionPtr.h  AutoMAPI.h  ECArchiverLogger.cpp  ECArchiverLogger.h  ECDatabase.cpp  ECDatabase.h  ECDatabaseMySQL.cpp  ECDatabaseMySQL.h  Makefile.am  Makefile.in  archivectrl.cpp  archivectrl.h  archivemanage.cpp  archivemanage.h  archiver-common.cpp  archiver-common.h  archiver-session.cpp  archiver-session.h  archiver-session_fwd.h  archiver.cpp  archiver.h  archivestatecollector.cpp  archivestatecollector.h  archivestateupdater.cpp  (+5 more)
ECtools/zarafa-cfgchecker/: DAgentConfigCheck.cpp  DAgentConfigCheck.h  ECConfigCheck.cpp  ECConfigCheck.h  GatewayConfigCheck.cpp  GatewayConfigCheck.h  IcalConfigCheck.cpp  Makefile.am  (+13 more)
caldav/: CalDAV.cpp  CalDAV.h  CalDavProto.cpp  CalDavProto.h  CalDavUtil.cpp  CalDavUtil.h  Http.cpp  Http.h  Makefile.am  Makefile.in  ProtocolBase.cpp  ProtocolBase.h  WebDav.cpp  WebDav.h  iCal.cpp  iCal.h
common/: CommonUtil.cpp  CommonUtil.h  ConsoleTable.cpp  ConsoleTable.h  ECABEntryID.cpp  ECABEntryID.h  ECACL.cpp  ECACL.h  ECCache.cpp  ECCache.h  ECChannel.cpp  ECChannel.h  ECChannelClient.cpp  ECChannelClient.h  ECConfig.cpp  ECConfig.h  ECConfigImpl.cpp  ECConfigImpl.h  ECDatabaseMySQL.cpp  ECDatabaseMySQL.h  ECDebug.cpp  ECDebug.h  ECDebugPrint.cpp  ECDebugPrint.h  ECDefs.h  ECFeatureList.h  ECFeatures.cpp  ECFeatures.h  ECFifoBuffer.cpp  ECFifoBuffer.h  ECFifoStream.cpp  ECFifoStream.h  ECGetText.cpp  ECGetText.h  ECGuid.cpp  ECGuid.h  ECIConv.cpp  ECIConv.h  ECInterfaceDefs.h  ECInvariantChecker.h  (+114 more)
doc/: Makefile.am  Makefile.in  manual.xml  za-aclset.1  za-aclsync.1  za-restore.1  zarafa-admin.1  zarafa-archiver.1  zarafa-archiver.cfg.5  zarafa-autorespond.1  zarafa-backup.1  zarafa-backup.cfg.5  zarafa-dagent.1  zarafa-dagent.cfg.5  zarafa-fsck.1  zarafa-gateway.1  zarafa-gateway.cfg.5  zarafa-ical.1  zarafa-ical.cfg.5  zarafa-indexer.1  zarafa-indexer.cfg.5  zarafa-ldap.cfg.5  zarafa-ldapms.cfg.5  zarafa-licensed.1  zarafa-licensed.cfg.5  zarafa-mailbox-permissions.1  zarafa-monitor.1  zarafa-monitor.cfg.5  zarafa-msr-verify.1  zarafa-msr.1  zarafa-msr.cfg.5  zarafa-passwd.1  zarafa-report.1  zarafa-restore.1  zarafa-search.1  zarafa-search.cfg.5  zarafa-server.1  zarafa-server.cfg.5  zarafa-set-oof.1  zarafa-spooler.1  (+4 more)
gateway/: ClientProto.h  Gateway.cpp  IMAP.cpp  IMAP.h  Makefile.am  Makefile.in  POP3.cpp  POP3.h
inetmapi/: ECMapiUtils.cpp  ECMapiUtils.h  ECVMIMEUtils.cpp  ECVMIMEUtils.h  MAPISMTPTransport.cpp  MAPISMTPTransport.h  MAPIToVMIME.cpp  MAPIToVMIME.h  Makefile.am  Makefile.in  SMIMEMessage.cpp  SMIMEMessage.h  VMIMEToMAPI.cpp  VMIMEToMAPI.h  inetmapi.cpp  inetmapi.h  inputStreamMAPIAdapter.cpp  inputStreamMAPIAdapter.h  mapiAttachment.cpp  mapiAttachment.h  mapiTextPart.cpp  mapiTextPart.h  options.h  outputStreamMAPIAdapter.cpp  outputStreamMAPIAdapter.h  tnef.cpp  tnef.h
installer/: Makefile.am  Makefile.in  zarafa.ldif
libfreebusy/: ECEnumFBBlock.cpp  ECEnumFBBlock.h  ECFBBlockList.cpp  ECFBBlockList.h  ECFreeBusyData.cpp  ECFreeBusyData.h  ECFreeBusySupport.cpp  ECFreeBusySupport.h  ECFreeBusyUpdate.cpp  ECFreeBusyUpdate.h  Makefile.am  Makefile.in  PublishFreeBusy.cpp  PublishFreeBusy.h  freebusy.h  freebusyguid.h  freebusytags.h  freebusyutil.cpp  freebusyutil.h  recurrence.cpp  recurrence.h
libicalmapi/: ICalToMAPI.cpp  ICalToMAPI.h  MAPIToICal.cpp  MAPIToICal.h  Makefile.am  Makefile.in  icalinit.cpp  icalitem.h  icalmapi.h  icalrecurrence.cpp  icalrecurrence.h  icaluid.cpp  icaluid.h  nameids.cpp  nameids.h  valarm.cpp  valarm.h  vconverter.cpp  vconverter.h  vevent.cpp  vevent.h  vfreebusy.cpp  vfreebusy.h  vtimezone.cpp  vtimezone.h  vtodo.cpp  vtodo.h
libtimezone/: ECMAPITimezone.cpp  ECMAPITimezone.h  Makefile.am  Makefile.in  OlsonNames.cpp  makeOlsonNames.py  windowsZones.xml
php-ext/: ECImportContentsChangesProxy.cpp  ECImportContentsChangesProxy.h  ECImportHierarchyChangesProxy.cpp  ECImportHierarchyChangesProxy.h  ECRulesTableProxy.cpp  ECRulesTableProxy.h  Makefile.am  Makefile.in  Session.cpp  Session.h  SessionPool.cpp  SessionPool.h  globals.h  main.cpp  main.h  phpconfig.h  typeconversion.cpp  typeconversion.h  util.cpp  util.h  zarafa.ini
po/: Makefile.am  Makefile.in  bg.po  ca.po  cs.po  da_DK.po  de_DE.po  el.po  es.po  es_CA.po  es_ES.po  et.po  fa.po  fi_FI.po  fr.po  fr_BE.po  fr_FR.po  gl.po  he.po  hr.po  hu.po  it.po  it_IT.po  ja.po  ko.po  lt.po  nb.po  nl_BE.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ru.po  ru_RU.po  sl.po  sv_SE.po  tr.po  uk.po  zh_CN.po  zh_TW.po
spooler/: DAgent.cpp  LMTP.cpp  LMTP.h  Makefile.am  Makefile.in  PyMapiPlugin.cpp  PyMapiPlugin.h  PythonSWIGRuntime.h  Spooler.cpp  archive.cpp  archive.h  mailer.cpp  mailer.h  rules.cpp  rules.h
swig/: ECLogger.i  IECExportChanges.i  IECServiceAdmin.i  IECSpooler.i  IECTestProtocol.i  MAPINotifSink.cpp  MAPINotifSink.h  Makefile.am  Makefile.in  RecurrenceState.i  RecurrenceState.swig.h  archiver.i  director_util.cpp  director_util.h  ecdefs.i  edkmdb.i  helpers.i  icalmapi.i  inetmapi.i  libcommon.i  libfreebusy.i  licenseclient.i  mapi.i  mapicalendar.i  mapidefs.i  mapinotifsink.i  mapitimezone.i  mapix.i  swig_iunknown.h  typemap.i  zarafasync.i
zarafa-libsync/: ECLibSync.h  ECOfflineABImporter.cpp  ECOfflineABImporter.h  ECResyncSet.cpp  ECResyncSet.h  ECSync.cpp  ECSync.h  ECSyncContext.cpp  ECSyncContext.h  ECSyncLog.cpp  ECSyncLog.h  ECSyncSettings.cpp  ECSyncSettings.h  ECSyncUtil.cpp  ECSyncUtil.h  Makefile.am  Makefile.in
(+1391 files in other folders)
